--- a/WhiteBears/Views/AdminPage/UserSettings.cshtml
+++ b/WhiteBears/Views/AdminPage/UserSettings.cshtml
@@ -1,6 +1,11 @@
 ﻿@model IEnumerable<WhiteBears.Models.User>
 
 @Styles.Render("~/Style/UserSettings.css")
+
+@{
+    Layout = "~/Views/Shared/_AdminPages.cshtml";
+}
+
 <script src="~/Scripts/jquery-3.3.1.js"></script>
 <script>
     function sortTable(n) {
@@ -46,49 +51,63 @@
     }
 </script>
 <div id="AddHeaderContainer">
-    <h2 class="header">User Settings</h2>
+    <button class="btn btn-secondary back-button" onclick="location.href='@Url.Action("Index", "AdminPage")'">Back</button>
+    <h2 class="header header-text">User Settings</h2>
 </div>
-<h3 class="header">New User Information</h3>
+<h3 class="header header-text">New User Information</h3>
 
 @Html.AntiForgeryToken()
 
 <div id="NewUserForm" class="form-horizontal">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        <table class="table borderless">
-            <tr>
-                <td class="left-column"><h4>First Name:</h4></td>
-                <td><input name="firstname" type="text" /></td>
-            </tr>
-            <tr>
-                <td class="left-column"><h4>Last Name:</h4></td>
-                <td><input name="lastname" type="text" /></td>
-            </tr>
-            <tr>
-                <td class="left-column"><h4>Username:</h4></td>
-                <td><input name="username" type="text" /></td>
-            </tr>
-            <tr>
-                <td class="left-column"><h4>Password (temporary):</h4></td>
-                <td><input name="password" type="password" /></td>
-            </tr>
-            <tr>
-                <td class="left-column"><h4>Password (confirm):</h4></td>
-                <td><input name="passwordConfirm" type="password" /></td>
-            </tr>
-            <tr>
-                <td class="left-column"><h4>Role:</h4></td>
-                <td><input name="role" type="text" /></td>
-            </tr>
-        </table>
-    </div>
+    <form id="NewUserForm">
+        <div class="form-group">
+            <table class="table borderless">
+                <tr>
+                    <td class="left-column"><h4>First Name:</h4></td>
+                    <td><input name="firstname" type="text" required pattern=".{2,20}" title="2 to 20 characters" /></td>
+                </tr>
+                <tr>
+                    <td class="left-column"><h4>Last Name:</h4></td>
+                    <td><input name="lastname" type="text" required pattern=".{2,20}" title="2 to 20 characters" /></td>
+                </tr>
+                <tr>
+                    <td class="left-column"><h4>Username:</h4></td>
+                    <td><input name="username" type="text" required pattern=".{4,20}" title="4 to 20 characters" /></td>
+                </tr>
+                <tr>
+                    <td class="left-column"><h4>Password (temporary):</h4></td>
+                    <td><input name="password" type="password" required pattern=".{5,20}" title="5 to 20 characters" /></td>
+                </tr>
+                <tr>
+                    <td class="left-column"><h4>Password (confirm):</h4></td>
+                    <td><input name="passwordConfirm" type="password" /></td>
+                </tr>
+                <tr>
+                    <td class="left-column"><h4>Role:</h4></td>
+                    <td>
+                        <select id="roleSelect" width="300px">
+                            <option value="Developer">Developer</option>
+                            <option value="Project Manager">Project Manager</option>
+                            <option value="Full Stack Developer">Full Stack Developer</option>
+                            <option value="Business Analyst">Business Analyst</option>
+                            <option value="Contractor">Contractor</option>
+                            <option value="Admin">Admin</option>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button value="create" class="btn btn-success ">Create</button>
+                        </select>
+                    </td>
+                </tr>
+            </table>
         </div>
-    </div>
+        <div class="form-group">
+            <div class=" col-md-10">
+                <input type="submit" value="Create" class="btn btn-lg btn-success ">
+            </div>
+        </div>
+    </form>
+
+        
 </div>
 
 
@@ -184,6 +203,45 @@
 
         passwordfield.hide();
 
+
+        $('#NewUserForm').on('submit', function (e){
+            e.preventDefault();
+
+            var firstName = $('input[name=firstname]').val();
+            var lastName = $('input[name=lastname]').val();
+            var username = $('input[name=username]').val();
+            var password = $('input[name=password]').val();
+            var passwordConfirm = $('input[name=passwordConfirm]').val();
+            var role = $('#roleSelect').find(":selected").text();
+
+
+            if (password != passwordConfirm) {
+                alert("Passwords don't match.");
+                return;
+            }
+
+            $.ajax({
+                type: "post",
+                url: '/AdminPage/AddUser',
+                dataType: "json",
+                data: {
+                    firstName: firstName,
+                    lastName: lastName,
+                    username: username,
+                    password: password,
+                    role: role
+                },
+                success: function (data) {
+                    alert('Successfully added ' + username);
+                    window.location.href = '@Url.Action("UserSettings", "AdminPage")';
+                },
+
+                error: function () {
+                    successful = false;
+                }
+            });
+        })
+
         $(document).on('click', '#DisabledUsersTable > tbody:last > tr', function () {
                 changeButtonState(enableButton, enableButton.attr('hidden') == 'true');
 
@@ -207,7 +265,7 @@
 
                     changeButtonState(enableButton, true);
                 }
-            
+
         })
 
         $(document).on('click', '#EditUserTable > tbody:last > tr', function () {
@@ -376,66 +434,10 @@
                 disableAllButtons();
 
                 newPassword.val('');
-                
+
                 passwordfield.hide();
             }
         })
-
-        createButton.on('click', function () {
-            var firstName = $('input[name=firstname]').val();
-            var lastName = $('input[name=lastname]').val();
-            var username = $('input[name=username]').val();
-            var password = $('input[name=password]').val();
-            var passwordConfirm = $('input[name=passwordConfirm]').val();
-            var role = $('input[name=role]').val();
-
-
-            if (password != passwordConfirm) {
-                alert("Passwords don't match.");
-                return;
-            }
-
-            if (!ValidateInput(firstName, "First Name", 2, 20))
-                return;
-            if (!ValidateInput(lastName, "Last Name", 2, 20))
-                return;
-            if (!ValidateInput(username, "Username", 4, 20))
-                return;
-            if (!ValidateInput(password, "Password", 5, 20))
-                return;
-            if (!ValidateInput(role, "Role", 3, 20))
-                return;
-
-            $.ajax({
-                type: "post",
-                url: '/AdminPage/AddUser',
-                dataType: "json",
-                data: {
-                    firstName: firstName,
-                    lastName: lastName,
-                    username: username,
-                    password: password,
-                    role: role
-                },
-                success: function (data) {
-                    alert('Successfully added ' + username);
-                    window.location.href = '@Url.Action("UserSettings", "AdminPage")';
-                },
-
-                error: function () {
-                    successful = false;
-                }
-            });
-        })
-
-        function ValidateInput(input, type, min, max) {
-            if (input.length < min || input.length > max) {
-                alert(type + ' must be between ' + min + ' and ' + max + ' characters long.');
-                return false;
-            }
-
-            return true;
-        }
 
         function disableAllButtons() {
             changeButtonState(modifyButton, false);
