--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -324,22 +324,24 @@
 
         deleteButton.on('click', function () {
             if (deleteButton.text() === "Delete") {
-                $.ajax({
-                        type: "post",
-                        url: '@Url.Action("DeleteNote", "Dashboard")',
-                        dataType: "json",
-                        data: {
-                            noteId: ""+clickedRow.attr('id')
-                        },
-                        success: function (data) {
-                        },
+                if(confirm('Are you sure you want to delete this note?')){
+                    $.ajax({
+                            type: "post",
+                            url: '@Url.Action("DeleteNote", "Dashboard")',
+                            dataType: "json",
+                            data: {
+                                noteId: ""+clickedRow.attr('id')
+                            },
+                            success: function (data) {
+                            },
 
-                        error: function () {
-                            alert("There was an issue deleting this note.");
-                        }
-                });
+                            error: function () {
+                                alert("There was an issue deleting this note.");
+                            }
+                    });
 
-                clickedRow.remove();
+                    clickedRow.remove();
+                }
                 changeButtonState(deleteButton, false);
                 changeButtonState(modifyButton, false);
             } else {
