--- a/WhiteBears/Views/AdminPage/ProjectSettings.cshtml
+++ b/WhiteBears/Views/AdminPage/ProjectSettings.cshtml
@@ -102,32 +102,34 @@
         });
 
         $(document).on('click', 'button[value=delete]', function () {
-            currentRadio.parent().remove();
-            $('input[name=optradio]:eq(0)').prop("checked", true);
+            if(confirm('Are you sure you want to delete this project?')){
+                currentRadio.parent().remove();
+                $('input[name=optradio]:eq(0)').prop("checked", true);
 
 
-            if ($('input[name=optradio]:eq(0)').length == 0) {
-                $('#TaskInformationContainer').remove();
-                $('#ProjectTableContainer').remove();
-            }
-
-            loadTables();
-
-            $.ajax({
-                type: "post",
-                url: '/AdminPage/DeleteProject',
-                dataType: "json",
-                data: {
-                    projectId: radioValue
-                },
-                success: function (data) {
-
-                },
-
-                error: function () {
-                    successful = false;
+                if ($('input[name=optradio]:eq(0)').length == 0) {
+                    $('#TaskInformationContainer').remove();
+                    $('#ProjectTableContainer').remove();
                 }
-            });
+
+                loadTables();
+
+                $.ajax({
+                    type: "post",
+                     url: '/AdminPage/DeleteProject',
+                    dataType: "json",
+                    data: {
+                        projectId: radioValue
+                    },
+                    success: function (data) {
+
+                    },
+
+                    error: function () {
+                        successful = false;
+                    }
+                });
+            }
         })
 
         function loadTables() {
