Fix admin styles, team-management styles and project manager functionality

--- a/WhiteBears/Style/UserSettings.css
+++ b/WhiteBears/Style/UserSettings.css
@@ -14,7 +14,7 @@
     border-bottom: solid black 1px;
     padding: 5px;
     margin-bottom: 50px;
-    text-align: center
+    text-align: left;
 }
 
 #tasktable{
@@ -25,8 +25,12 @@
     margin-bottom: 100px;
 }
 
-.header {
+.subheader {
     color: black;
+}
+
+.header {
+    margin-left: 100px;
 }
 
 #EditUserTableContainer, #DisabledUsersTableContainer {
