--- a/WhiteBears/Views/AdminPage/ProjectSettings.cshtml
+++ b/WhiteBears/Views/AdminPage/ProjectSettings.cshtml
@@ -69,7 +69,7 @@
 </form>
 <div id="ProjectTableContainer">
 
-    <h3 class="header">Project Information</h3>
+    <h3 class="subheader header-text">Project Information</h3>
 
     <hr />
 
@@ -77,7 +77,7 @@
     <br />
 
     <div id="TaskInformationContainer">
-        <h3 class="header">Task Information</h3>
+        <h3 class="subheader header-text">Task Information</h3>
         <hr />
 
         <table id="tasktable"></table>
