--- a/WhiteBears/Views/Shared/_AdminPages.cshtml
+++ b/WhiteBears/Views/Shared/_AdminPages.cshtml
@@ -25,15 +25,16 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Business", "About", "Home")</li>
                     <li>@Html.ActionLink("Features", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Pricing", "Contact", "Home")</li>
                     <li>@Html.ActionLink("About Us", "Contact", "Home")</li>
+
                 </ul>
 
                 <ul class="nav navbar-nav pull-right">
-                    <li class="pull-right">@Html.ActionLink("Sign Up", "Index", "SignUp")</li>
+                    <li class="pull-right">@Html.ActionLink("Sign Out", "LogOut", "Home")</li>
                 </ul>
             </div>
         </div>
