--- a/WhiteBears/Views/TeamManagement/Index.cshtml
+++ b/WhiteBears/Views/TeamManagement/Index.cshtml
@@ -56,7 +56,7 @@
                 </table>
             </div>
 
-            <div class="col-sm-3 justify-content-center">
+            <div class="col-sm-2 justify-content-center">
                 <button class="btn btn-lg btn-primary disabled glyphicon glyphicon-plus" value="add">Add</button>
                 <button class="btn btn-lg btn-danger disabled glyphicon glyphicon-minus" value="remove">Remove</button>
             </div>
@@ -185,8 +185,7 @@
                         dataType: "json",
                         data: {
                             usernames: removedUsers,
-                            
-                            : '@Model.ExcludedUsers',
+                            excludedUsers : '@Model.ExcludedUsers',
                             projectId: '@Model.CurrentProject.ProjectId'
                         },
                         success: function (data) {
@@ -200,7 +199,7 @@
 
                 alert("Update successful.")
 
-                window.location.href = '@Url.Action("Index", "Project", new { projectId = Model.CurrentProject.ProjectId } )';
+                window.location.href = '@Url.Action("Index", "Project", new { id = Model.CurrentProject.ProjectId } )';
             })
 
             function changeButtonState(button, state) {
