--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -83,7 +83,7 @@
 
 <div style="float: left; width: 85%">
     <header>
-        <div id="headings" class="header-text" style="margin-top: 70px;">
+        <div id="headings" class="header-text" style="margin-top:70px;">
             <h2>Personal Dashboard</h2>
             <h3>Here's an overview of your projects</h3>
         </div>
@@ -101,8 +101,8 @@
             </span>
         </form>
     </header>
-
-    <div style="overflow: auto">
+    <div>
+        <div>
         <div id="TasksSection">
             <label>Tasks</label>
             <div class="scrollable-task">
@@ -153,7 +153,7 @@
         </div>
     </div>
 
-    <div style="overflow: auto;">
+    <div style="clear:both;float:left;">
         <div class="ProgressBarContainers">
             <div class="ProgressBarContainer">
                 <label>Tasks Completed</label>
@@ -203,6 +203,7 @@
     </div>
     
         </div>
+    </div>
 </div>
 
 <script>
