--- a/WhiteBears/Style/dashboard.css
+++ b/WhiteBears/Style/dashboard.css
@@ -45,8 +45,8 @@ table {
     float: left;
     margin-left: 50px;
     margin-top: 20px;
-    min-height: 300px;
-    width: 60%;
+    min-height: 100px;
+    width: 55%;
     margin-bottom: 15px;
 }
 
@@ -109,8 +109,9 @@ header {
 
 #PersonalNotesSection {
     margin-top: 20px;
+    width: 65%;
     float: right;
-    margin-right: 20px;
+    margin-left: 20px;
 }
 
     #PersonalNotesSection td, th {
@@ -121,6 +122,7 @@ header {
 
 #PersonalNotesButtonsContainer {
     margin-top: 10px;
+    height:50px;
     width: 100%;
     text-align: center;
 }
@@ -181,19 +183,21 @@ textarea {
 }
 
 #PersonalNoteTextContainer {
-    margin-top: 15px;
+    margin-top: 0px;
 }
 
 .scrollable-task {
-    height: 400px;
-    max-height: 300px;
+    height: 20%;
+    max-height:200px;
+    min-height:100px ;
     overflow: scroll;
     overflow-x: hidden;
 }
 
 .scrollable-notes {
-    height: auto;
-    max-height: 250px;
+    height: 20%;
+    max-height:165px;
+    min-height: 100px;
     overflow: hidden;
     overflow-y: scroll
 }
@@ -201,15 +205,15 @@ textarea {
 #TaskOverviewSection {
     text-align: center;
     float: right;
-    height: 100px;
-    width: 30%;
+    height: 100%;
+    width: 37%;
     margin-top: 20px;
     margin-right: 20px;
 }
 
 #pie-chartcanvas {
-    width: 500px;
-    height: 250px;
+    width:100%;
+    height: 100%x;
 }
 
 #projectselection {
