Fix personal notes issue: no notes, will be overlapping progress bars

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -153,7 +153,7 @@
         </div>
     </div>
 
-    <div style="clear:both;float:left;">
+    <div style="clear:both;float:left;width: 100%">
         <div class="ProgressBarContainers">
             <div class="ProgressBarContainer">
                 <label>Tasks Completed</label>
@@ -173,7 +173,7 @@
                 <text id="storageRemaining" class="text-medium text-secondary">2GB remaining</text>
             </div>
         </div>
-    <div id="PersonalNotesSection">
+    <div id="PersonalNotesSection" style="float: right">
         <div>
             <label>Personal Notes</label>
             <div class="scrollable-notes" id="PersonalNotesTable">
