--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -368,8 +368,8 @@
         }
 
         function isNoteValid() {
-            if (noteTextArea.val().length < 3) {
-                alert("Notes must be at least 3 characters long.");
+            if (noteTextArea.val().length < 3 || noteTextArea.val().length > 255) {
+                alert("Notes must be between 3 to 255 characters long.");
                 return false;
             }
 
