Fix navbar width issue, fix unresponsive donut chart

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -558,7 +558,7 @@
                             display: true,
                             text: 'Task Overview',
                             position: 'top'
-                        }, responsive: false,
+                        }, responsive: true,
 
                         legend: {
                             position: 'right'
