Stylized Add Project, and Dashboard

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -81,9 +81,9 @@
     </div>
 </nav>
 
-<div style="float: left; width: 85%">
+<div style="float: left; width: 90%">
     <header>
-        <div id="headings" class="header-text" style="margin-top:70px;">
+        <div id="headings" class="header-text">
             <h2>Personal Dashboard</h2>
             <h3>Here's an overview of your projects</h3>
         </div>
