--- a/WhiteBears/Style/dashboard.css
+++ b/WhiteBears/Style/dashboard.css
@@ -83,7 +83,6 @@ table {
 
 header {
     text-align: center;
-    margin-left: 50px;
 }
 
 .headerButtons:hover {
@@ -143,6 +142,12 @@ textarea {
 }
 
 #headings {
+    box-shadow: 0 5px 5px 0px gray;
+    border-bottom: solid black 1px;
+    padding: 25px;
+    margin-bottom: 20px;
+    margin-top: 25px;
+    width: 100%;
     text-align: left;
 }
 
