Add titles to Dashboard, Team Management, Add Project, Admin Pages, and Sign Up pages

--- a/WhiteBears/Views/AddProject/Index.cshtml
+++ b/WhiteBears/Views/AddProject/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using WhiteBears.Models
 @model AddProject
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Add New Project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
