--- a/WhiteBears/Views/AdminPage/Index.cshtml
+++ b/WhiteBears/Views/AdminPage/Index.cshtml
@@ -2,6 +2,8 @@
 @Styles.Render("~/bundles/style/usersettings")
 @{
     Layout = "~/Views/Shared/_AdminPages.cshtml";
+    ViewBag.Title = $"Admin Home Page";
+
 }
 
 <script src="~/Scripts/jquery-3.3.1.js"></script>
