Minor edit: change Documents button to Documents (Remove)

--- a/WhiteBears/Views/AdminPage/Index.cshtml
+++ b/WhiteBears/Views/AdminPage/Index.cshtml
@@ -27,7 +27,7 @@
         </div><br />
         <div class="container">
             <label>If you want to download or purge any uploaded document, use this.</label><br />
-            <button class="btn btn-lg btn-success" value="documents">Documents</button>
+            <button class="btn btn-lg btn-success" value="documents">Documents (Remove)</button>
         </div>
     </div>
 </div>
