Adding page title to doc review and icon to title

--- a/WhiteBears/Views/Shared/_Layout.cshtml
+++ b/WhiteBears/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - WhiteBears</title>
+    <link rel="shortcut icon" href="~/Content/icon.ico" />
     @Scripts.Render("~/bundles/scripts/jquery")
     @Scripts.Render("~/bundles/scripts/modernizr")
     @Scripts.Render("~/bundles/scripts/angular")
